@startuml
class WortBildPaar {
  -wort: String
  -bildURL: String
  +WortBildPaar(wort: String, bildURL: String)
  +getBildURL(): String
  +checkWort(wort: String): Boolean
  {static} +isValid(bildURL: String): Boolean
  +getWort(): String
}

class RechtschreibTrainer {
  -wortBildPaare: ArrayList<WortBildPaar>
  -ausgewaehltesPaar: WortBildPaar
  -versucheGesamt: int
  -versucheRichtig: int
  -versucheFalsch: int
  +RechtschreibTrainer()
  +waehleZufaelligesPaar(): void
  +rateWort(wort: String): Boolean
  +statistik(): String
  +getausgewaehltesPaar(): WortBildPaar
  +getwortBildPaare(): ArrayList<WortBildPaar>
}

interface Speicherstrategie {
  +save(trainer: RechtschreibTrainer): void
  +load(): RechtschreibTrainer
}

class JSON {
  +save(trainer: RechtschreibTrainer): void
  +load(): RechtschreibTrainer
}

class GUI {
  +start(): void
  +zeigeStatistikUndBildUndAbfrage(letzterVersuchErfolgreich: boolean): String
  +getTrainer(): RechtschreibTrainer
}

RechtschreibTrainer "1" o-- "0..*" WortBildPaar : hat
GUI ..> Speicherstrategie : verwendet
JSON ..|> Speicherstrategie
GUI ..> RechtschreibTrainer : verwendet
Speicherstrategie ..> RechtschreibTrainer : verwendet
@enduml